# HarmBBM

./: .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt
configs/: mnist.yaml  pathmnist.yaml
harmbbm/: __init__.py
harmbbm/data/: __init__.py  common.py  mnist.py  pathmnist.py
harmbbm/engine/: __init__.py  core.py  results.py  runner.py
harmbbm/model/: __init__.py  mlp.py  resnet.py
harmbbm/optimizers/: __init__.py  adabelief.py  bbbound.py  factory.py  harmbbm.py
harmbbm/search/: __init__.py  spaces.py
harmbbm/utils/: __init__.py  io.py  plotting.py  reproducibility.py
scripts/: __init__.py  plot_comparison.py  run_experiment.py  run_mnist.py  run_pathmnist.py  smoke_test.py
